Challenge Work update

--- a/credit_risk_resampling.ipynb
+++ b/credit_risk_resampling.ipynb
@@ -743,7 +743,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -752,7 +752,7 @@
        "Counter({'loan_status': 1})"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -768,7 +768,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -777,7 +777,7 @@
        "LogisticRegression(random_state=1)"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -792,16 +792,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.5447339051023905"
+       "0.6405313678000166"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -816,7 +816,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -847,13 +847,13 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>Actual high_risk</th>\n",
-       "      <td>70</td>\n",
-       "      <td>31</td>\n",
+       "      <td>73</td>\n",
+       "      <td>28</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Actual low_risk</th>\n",
-       "      <td>10324</td>\n",
-       "      <td>6780</td>\n",
+       "      <td>7555</td>\n",
+       "      <td>9549</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -861,11 +861,11 @@
       ],
       "text/plain": [
        "                  Predicted high_risk  Predicted low_risk\n",
-       "Actual high_risk                   70                  31\n",
-       "Actual low_risk                 10324                6780"
+       "Actual high_risk                   73                  28\n",
+       "Actual low_risk                  7555                9549"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -884,7 +884,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -893,10 +893,10 @@
      "text": [
       "                   pre       rec       spe        f1       geo       iba       sup\n",
       "\n",
-      "  high_risk       0.01      0.69      0.40      0.01      0.52      0.28       101\n",
-      "   low_risk       1.00      0.40      0.69      0.57      0.52      0.27     17104\n",
+      "  high_risk       0.01      0.72      0.56      0.02      0.64      0.41       101\n",
+      "   low_risk       1.00      0.56      0.72      0.72      0.64      0.40     17104\n",
       "\n",
-      "avg / total       0.99      0.40      0.69      0.56      0.52      0.27     17205\n",
+      "avg / total       0.99      0.56      0.72      0.71      0.64      0.40     17205\n",
       "\n"
      ]
     }
@@ -916,7 +916,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -925,7 +925,7 @@
        "Counter({'loan_status': 1})"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -941,7 +941,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -950,7 +950,7 @@
        "LogisticRegression(random_state=1)"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -963,7 +963,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -972,7 +972,7 @@
        "0.6585252479878483"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -985,7 +985,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1034,7 +1034,7 @@
        "Actual low_risk                  5246               11858"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1051,7 +1051,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1092,7 +1092,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1101,7 +1101,7 @@
        "Counter({'loan_status': 1})"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1116,9 +1116,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "LogisticRegression(random_state=1)"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Train the Logistic Regression model using the resampled data\n",
     "from sklearn.linear_model import LogisticRegression\n",
@@ -1128,16 +1139,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.5447339051023905"
+       "0.5442369453268994"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1152,7 +1163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1188,8 +1199,8 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Actual low_risk</th>\n",
-       "      <td>10324</td>\n",
-       "      <td>6780</td>\n",
+       "      <td>10341</td>\n",
+       "      <td>6763</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1198,10 +1209,10 @@
       "text/plain": [
        "                  Predicted high_risk  Predicted low_risk\n",
        "Actual high_risk                   70                  31\n",
-       "Actual low_risk                 10324                6780"
+       "Actual low_risk                 10341                6763"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1218,7 +1229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1260,7 +1271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1269,7 +1280,7 @@
        "Counter({'loan_status': 1})"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1285,7 +1296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1294,7 +1305,7 @@
        "LogisticRegression(random_state=1)"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1308,7 +1319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1317,7 +1328,7 @@
        "0.6687805064416639"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1331,7 +1342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1380,7 +1391,7 @@
        "Actual low_risk                  6758               10346"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1397,7 +1408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
